--- a/src/components/AddBook.css
+++ b/src/components/AddBook.css
@@ -15,7 +15,8 @@
     background-color: #fff;
     max-width: 600px;
     margin: auto;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    align-items: normal;
 }
 
 /* Input field styles */
